# functor-extended

./: ChangeLog.md  LICENSE  README.md  functor-extended.cabal
src/Data/Functor/: Extended.hs
