name:                   functor-extended
version:                0.1.0.0
synopsis:               Extended Data.Functor module with extra functions.
-- description:
homepage:               https://github.com/trskop/functor-extended
bug-reports:            https://github.com/trskop/functor-extended/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2011, 2013-2015, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:       src
  exposed-modules:      Data.Functor.Extended

  default-language:     Haskell2010
  other-extensions:     CPP, NoImplicitPrelude

  -- Module Data.Functor exists since base-4.2.0.0.
  build-depends:        base >=4.2 && <4.9

  ghc-options:          -Wall -fwarn-tabs

source-repository head
  type:                 git
  location:             git://github.com/trskop/functor-extended.git

source-repository this
  type:                 git
  location:             git://github.com/trskop/functor-extended.git
  tag:                  0.1.0.0
